Updated list of python packages in environment. Updated code to plot figure. Added PNG of chart.

--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,10 +1,147 @@
-google-cloud-storage
-google-cloud-vision
-google-cloud-texttospeech
-google-cloud-automl
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-ffmpeg-python
-pydub
-ghostscript
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+aiohttp=3.6.3=py37h4ab8f01_2
+asn1crypto=1.4.0=pyh9f0ad1d_0
+async-timeout=3.0.1=py_1000
+attrs=20.2.0=pyh9f0ad1d_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.1=py_0
+blas=2.16=mkl
+blinker=1.4=py_1
+brotlipy=0.7.0=py37h0013d47_1001
+ca-certificates=2020.6.20=hecda079_0
+cachetools=4.1.1=py_0
+certifi=2020.6.20=py37hf50a25e_2
+cffi=1.14.3=py37hd6b71e5_1
+chardet=3.0.4=py37hf50a25e_1008
+click=7.1.2=pyh9f0ad1d_0
+colorama=0.4.4=pyh9f0ad1d_0
+cryptography=2.5=py37h74b6da3_1
+cudatoolkit=11.0.221=h74a9793_0
+cycler=0.10.0=py_2
+dataclasses=0.6=pypi_0
+decorator=4.4.2=py_0
+enum34=1.1.10=py37hc8dfbb8_2
+ffmpeg=4.3.1=ha925a31_0
+ffmpeg-python=0.2.0=py_0
+filelock=3.0.12=pypi_0
+freetype=2.10.4=hd328e21_0
+future=0.18.2=py37hc8dfbb8_2
+ghostscript=9.53.3=h33f27b4_1
+google-api-core=1.22.4=pyh9f0ad1d_0
+google-api-core-grpc=1.22.2=h21ff451_0
+google-api-python-client=1.12.5=pyh9f0ad1d_0
+google-auth=1.22.0=py_0
+google-auth-httplib2=0.0.4=pyh9f0ad1d_0
+google-auth-oauthlib=0.4.1=py_2
+google-cloud-automl=0.10.0=pyh9f0ad1d_0
+google-cloud-core=1.4.3=pyh9f0ad1d_0
+google-cloud-storage=1.32.0=pyh9f0ad1d_0
+google-cloud-texttospeech=1.0.1=pyh9f0ad1d_0
+google-cloud-vision=0.38.1=py37h21ff451_0
+google-crc32c=1.0.0=py37h6f2f0b9_1
+google-resumable-media=1.1.0=pyh9f0ad1d_0
+googleapis-common-protos=1.52.0=py37h1f41ff6_0
+grpcio=1.16.0=py37hbb4b082_1000
+httplib2=0.18.1=pyh9f0ad1d_0
+icu=58.2=vc14hc45fdbb_0
+idna=2.10=pyh9f0ad1d_0
+intel-openmp=2020.2=254
+ipykernel=5.3.4=py37h7b7c402_1
+ipython=7.18.1=py37hc6149b9_1
+ipython_genutils=0.2.0=py_1
+jedi=0.17.2=py37hc8dfbb8_1
+joblib=0.17.0=pypi_0
+jpeg=9b=vc14h4d7706e_1
+jupyter_client=6.1.7=py_0
+jupyter_core=4.6.3=py37hc8dfbb8_2
+kiwisolver=1.2.0=py37h1fb7aa8_1
+libblas=3.8.0=16_mkl
+libcblas=3.8.0=16_mkl
+libcrc32c=1.1.1=ha925a31_2
+liblapack=3.8.0=16_mkl
+liblapacke=3.8.0=16_mkl
+libpng=1.6.37=ha81a0f5_2
+libprotobuf=3.13.0.1=h200bbdf_0
+libsodium=1.0.18=h62dcd97_1
+libtiff=4.0.9=hf1753bf_1
+libuv=1.40.0=he774522_0
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+matplotlib=3.2.2=1
+matplotlib-base=3.2.2=py37hab8957c_1
+mkl=2020.1=216
+msys2-conda-epoch=20160418=1
+multidict=4.7.5=py37h4ab8f01_2
+ninja=1.10.1=h587dcfd_2
+nltk=3.5=pypi_0
+numpy=1.19.2=py37he804e03_1
+oauthlib=3.0.1=py_0
+olefile=0.46=pyh9f0ad1d_1
+openssl=1.0.2u=hfa6e2cd_0
+packaging=20.4=pypi_0
+pandas=1.1.3=py37h06f6abc_2
+parso=0.7.1=pyh9f0ad1d_0
+pickleshare=0.7.5=py_1003
+pillow=5.2.0=py37h08bbbbd_0
+pip=20.2.4=py_0
+prompt-toolkit=3.0.8=py_0
+protobuf=3.13.0.1=py37h1834ac0_1
+pyasn1=0.4.8=py_0
+pyasn1-modules=0.2.7=py_0
+pycparser=2.20=pyh9f0ad1d_2
+pydub=0.23.1=py_0
+pygments=2.7.2=py_0
+pyjwt=1.7.1=py_0
+pyopenssl=19.0.0=py37_0
+pyparsing=2.4.7=pyh9f0ad1d_0
+pyqt=5.6.0=py37h764d66f_1008
+pysocks=1.7.1=py37hf50a25e_2
+python=3.7.1=h9460c21_1003
+python-dateutil=2.8.1=py_0
+python_abi=3.7=1_cp37m
+pytorch=1.7.0=py3.7_cuda110_cudnn8_0
+pytz=2020.1=pyh9f0ad1d_0
+pywin32=228=py37h4ab8f01_0
+pyzmq=19.0.2=py37h453f00a_2
+qt=5.6.2=vc14h6f8c307_12
+regex=2020.10.23=pypi_0
+requests=2.24.0=pyh9f0ad1d_0
+requests-oauthlib=1.3.0=pyh9f0ad1d_0
+rsa=4.6=pyh9f0ad1d_0
+sacremoses=0.0.43=pypi_0
+scikit-learn=0.23.2=pypi_0
+scipy=1.5.3=pypi_0
+sentence-transformers=0.3.8=pypi_0
+sentencepiece=0.1.91=pypi_0
+setuptools=49.6.0=py37hf50a25e_2
+simplejson=3.17.2=py37h4ab8f01_1
+sip=4.18.1=py37h6538335_1000
+six=1.15.0=pyh9f0ad1d_0
+sqlite=3.20.1=vc14h7ce8c62_1
+threadpoolctl=2.1.0=pypi_0
+tk=8.6.7=vc14hb68737d_1
+tokenizers=0.8.1rc2=pypi_0
+torchaudio=0.7.0=py37
+torchvision=0.8.0=py37_cu110
+tornado=6.0.4=py37h4ab8f01_2
+traitlets=5.0.5=py_0
+transformers=3.3.1=pypi_0
+typing-extensions=3.7.4.3=0
+typing_extensions=3.7.4.3=py_0
+uritemplate=3.0.1=py_0
+urllib3=1.25.11=py_0
+vc=14.1=h869be7e_1
+vs2015_runtime=14.16.27012=h30e32a0_2
+wcwidth=0.2.5=pyh9f0ad1d_2
+wheel=0.35.1=pyh9f0ad1d_0
+win_inet_pton=1.1.0=py37hc8dfbb8_1
+wincertstore=0.2=py37hc8dfbb8_1005
+yarl=1.5.1=py37h4ab8f01_0
+zeromq=4.3.2=ha925a31_4
+zlib=1.2.11=vc14h1cdd9ab_1
